2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* base64.tcl: Added code to the Trf supported 'decode'r to ignore
	  whitespace in hte encoded input. [Bug 736900].

2003-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64c.tcl: Added the placeholder package.

2003-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Merged DEVELOPMENT branch from DEVELOPMENT-root to
	DEVELOPMENT-merge-1 This brings in the critcl enhancements for
	uuencode and yencode along with a few extra tests for yencode.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64c.tcl: Added file to define the base64c C coded package.
	* uuencode.tcl: Added critcl code into the package.
	* yencode.tcl: Added critcl code into the package.

2003-04-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* all: Created DEVELOPMENT branch - tagged root-DEVELOPMENT.
	This branch contains criticl-based C code to speed up some of the
	computationally expensive functions - generates a base64c package.
	
2003-04-21  Andreas Kupries  <andreask@pliers.activestate.com>

	* uuencode.test: Added code to suppress output from the log
	  package during the test.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* uuencode.man:
	* base64.tcl:
	* base64.man:
	* pkgIndex.tcl: Fixed bug #614591. Set version of the base64
	  package to to 2.2.2. uuencode is now at version 1.0.2
	  throughout.

2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* uuencode.test: 
	* uuencode.tcl: Fixed bug #700327, reported by Roger Niva
	  <rniva@users.sourceforge.net>. Added '--' before actual data
	  argument to prevent mishandling of data beginning with a dash
	  ('-'). Extended the testsuite to cover these cases.

2003-02-23  David N. Welton  <davidw@dedasys.com>

	* base64.tcl: Bumped base64.tcl Tcl requirement to 8.2, swapped