@@ -7,7 +7,7 @@
 # Copyright (c) 1998-2000 by Ajuba Solutions.
 # All rights reserved.
 #
-# RCS: @(#) $Id: base64.test,v 1.8 2003/05/01 22:40:12 patthoyts Exp $
+# RCS: @(#) $Id: base64.test,v 1.9 2003/10/24 17:46:29 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -92,6 +92,15 @@ test base64-2.4 {base64::decode handles equal sign padding} {
     # two padding chars
     base64::decode [base64::encode "0123"]
 } "0123"
+
+
+test base64-2.5 {base64::decode} {
+    base64::decode ""
+} ""
+test base64-2.6 {base64::decode} {
+    base64::decode " "
+} ""
+
 
 test base64-3.1 {base64 identity test} {
 	base64::decode [base64::encode "this is a test"]
